# sGzvbxb

./: .gitignore  ARCHITECTURE_REPORT.md  BUILD_SUCCESS.md  CHANGELOG.md  CHTL.code-workspace  CHTL语法文档.md  CMakeLists.txt  CMakeLists_simple.txt  CMakeLists_test.txt  CODE_REVIEW_REPORT.md  COMPILATION_STATUS.md  COMPILER_RESPONSIBILITY_UPDATE.md  FINAL_PROJECT_PROGRESS_REPORT.md  GENERATED_FILES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_PROGRESS_REPORT.md  PROJECT_PROGRESS_REPORT_V2.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  README_BUILD.md  RELEASE_CHECKLIST.md  TASK_COMPLETION_REPORT.md  TASK_COMPLETION_SUMMARY.md  TOKEN_ISOLATION_REPORT.md  analyze_missing.sh  attributes_output.html  build.bat  build.sh  chtl_demo  chtl_demo.cpp  chtl_simple  chtl_test  demo.html  demo_formatted.html  demo_output.html  format_html.py  generate_parsers.sh  hello.chtl  (+43 more)
cmake/: CHTLModules.cmake  PackModules.cmake
docs/: ANTLR4_REMOVAL_GUIDE.md  API_Reference.md  ARCHITECTURE.md  Build_System.md  CJMOD_Development_Guide.md  CMOD_CJMOD_Guide.md  Configuration_System.md  Contributing.md  Cross_Platform_Guide.md  PROJECT_STRUCTURE.md  User_Guide.md  code_generation_complete.md  enhanced_parser_fixes.md  enhanced_parser_test_results.md  hybrid_architecture.md  import_system_enhanced.md  module_structure.md  official_module_import.md  project_completion_summary.md  project_progress_summary.md  unified_architecture_complete.md  unified_architecture_implementation.md  user_guide.md
examples/: basic_template.chtl  chtljs_features.chtl  cjmod_example.cpp  config_creative.chtl  config_example.chtl  simple_test.chtl  simple_test2.chtl  simple_test3.chtl  test.chtl  test_import_enhanced.chtl  test_official_module.chtl
grammars/: CHConfig.g4  CHTL.g4  CHTLJavaScript.g4  CSS.g4  JavaScript.g4  Scanner.g4
scripts/: README.md  run_tests.sh
src/: CMakeLists.txt  chtl_antlr_main.cpp  chtl_main.cpp  main.cpp  main_simple.cpp  main_test.cpp  main_unified.cpp
src/chtl/: AutoClassIdProcessor.cpp  AutoClassIdProcessor.h  CHTLCJMOD.cpp  CHTLCJMOD.h  CHTLCJMODExample.cpp  CHTLCMOD.cpp  CHTLCMOD.h  CHTLCMODExample.cpp  CHTLCSSCompiler.cpp  CHTLCSSCompiler.h  CHTLCSSEnhancedExample.cpp  CHTLCSSExample.cpp  CHTLCSSPreprocessor.cpp  CHTLCSSPreprocessor.h  CHTLCompiler.cpp  CHTLConstraint.cpp  CHTLConstraint.h  CHTLConstraintExample.cpp  CHTLContext.cpp  CHTLContext.h  CHTLCustom.cpp  CHTLCustom.h  CHTLCustomExample.cpp  CHTLErrorHandler.cpp  CHTLErrorHandler.h  CHTLGenerator.cpp  CHTLGenerator.h  CHTLGeneratorExample.cpp  CHTLImport.cpp  CHTLImport.h  CHTLImportExample.cpp  CHTLImportVisitor.h  CHTLImportVisitorStandalone.cpp  CHTLImportVisitorStandalone.h  CHTLJSCompiler.cpp  CHTLJSCompiler.h  CHTLJSCompilerExample.cpp  CHTLJSCompilerStub.cpp  CHTLJSContext.h  CHTLJSExtension.h  (+30 more)
src/chtl/cache/: FragmentCache.cpp  FragmentCache.h
src/chtl/compiler/: CompilerDispatcher.cpp  CompilerDispatcher.h  CompilerInterface.h
src/chtl/compiler/antlr/: CSSCompilerWrapper.cpp  CSSCompilerWrapper.h  JSCompilerWrapper.cpp  JSCompilerWrapper.h
src/chtl/compiler/handwritten/: CHTLCompilerWrapper.cpp  CHTLCompilerWrapper.h  CHTLJSCompilerWrapper.cpp  CHTLJSCompilerWrapper.h
src/chtl/config/: ConfigurableCompiler.h  ConfigurableLexer.cpp  ConfigurableLexer.h  ConfigurableParser.cpp  ConfigurableParser.h  ConfigurationParser.cpp  ConfigurationParser.h  ConfigurationSystem.cpp  ConfigurationSystem.h  ConfigurationSystem_v2.cpp
src/chtl/core/: CHTLStateMachine.cpp  Scope.cpp  Types.h
src/chtl/error/: ANTLRErrorAdapter.h  CHTLJSErrorReporter.cpp  CHTLJSErrorReporter.h  EnhancedError.cpp  EnhancedError.h  ErrorCollector.h  ErrorInterface.cpp  ErrorInterface.h
src/chtl/generator/: HtmlGenerator.cpp  HtmlGenerator.h
src/chtl/module/: ModuleSystem.cpp  ModuleSystem.h
src/chtl/optimization/: CSSOptimizer.cpp  ParallelCompiler.cpp  ParallelCompiler.h  PerformanceOptimizer.h
src/chtl/optimizer/: PerformanceOptimizer.h
src/chtl/parallel/: ParallelCompiler.h
src/chtl/parser/: CHTLSimpleParser.cpp  CHTLSimpleParser.h  CSSParserAdapter.cpp  CSSParserAdapter.h  JSParserAdapter.h
src/chtl/parser/standalone/: CHTLCodeGenVisitor.cpp  CHTLCodeGenVisitor.h  CHTLJSCodeGenerator.cpp  CHTLJSCodeGenerator.h  CHTLJSLexer.h  CHTLJSParser.h  CHTLLexer.h  CHTLParser.h  CHTLParserEnhanced.cpp  CHTLParserEnhanced.h  ConfigLexer.cpp  ConfigLexer.h  ConfigParser.cpp  ConfigParser.h  ParserRuntime.h
src/chtl/scanner/: CHTLUnifiedScanner.cpp  CHTLUnifiedScanner.h  PrecisionScanner.cpp  PrecisionScanner.h  ScannerIntegrator.cpp  ScannerParserIntegration.cpp  ScannerParserIntegration.h  StateMachineScanner.cpp  StateMachineScanner.h
src/chtl/sourcemap/: SourceMap.h  SourceMapGenerator.cpp  SourceMapGenerator.h
src/chtl/stubs/: ManagerStubs.cpp
src/chtl/utils/: Memory.cpp  Memory.h  Performance.cpp  Performance.h  StringUtils.cpp  StringUtils.h  TechnicalDebtManager.h
src/chtljs/: CHTLJSContext.cpp  CHTLJSContext.h  CHTLJSStateMachine.cpp  CHTLJSStateMachine.h  CHTLJSUnquotedExample.cpp  CHTLJSValidator.cpp  CMakeLists.txt
src/module/Chtholly/CJMOD/Chtholly/info/: Chtholly.chtl
src/module/Chtholly/CJMOD/Chtholly/src/: chtholly.cpp
src/module/Chtholly/CMOD/Chtholly/info/: Chtholly.chtl
src/module/Chtholly/CMOD/Chtholly/src/: Chtholly.chtl
test/: debug_template.chtl  debug_tokens  debug_tokens.cpp  enhanced_basic.chtl  enhanced_comments.chtl  enhanced_import.chtl  enhanced_no_comments.chtl  enhanced_template.chtl  hello.html  import_test.chtl  minimal.chtl  run_tests.sh  simple_import.chtl  simple_import.html  simple_scanner_test.chtl  simple_specific_import.chtl  simple_template.chtl  specific_import_test.chtl  template_minimal.chtl  template_source.chtl  test_antlr_integration.cpp  test_cache  test_cache.cpp  test_chtljs.chtl  test_circular_inheritance.chtl  test_cjmod_import.chtl  test_complete_features.chtl  test_content.html  test_error_reporting.chtl  test_local_style.chtl  test_methods.chtl  test_module.chtl  test_module_import.chtl  test_output.html  test_parallel_compilation.cpp  test_scanner  (+8 more)
(+138 files in other folders)
